<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_gravity=""
    android:weightSum="10">

    <TextView
        android:id="@+id/no"
        android:fontFamily="@font/golden_age"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/number" />

    <ImageView
        android:id="@+id/posIcon"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_weight="2"
        android:scaleX="1"
        android:scaleY="1"
        app:srcCompat="@drawable/crown_gold"
        android:contentDescription="@string/crownIcon" />

    <TextView
        android:id="@+id/name"
        android:fontFamily="@font/golden_age"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:gravity="center"
        android:text="@string/name" />

    <TextView
        android:id="@+id/score"

        android:fontFamily="@font/golden_age"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:gravity="center"
        android:text="@string/score" />

    <TextView
        android:id="@+id/time"

        android:fontFamily="@font/golden_age"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:gravity="center"
        android:text="@string/time" />
</LinearLayout>
