<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.Kigyosch"
    tools:context="bme.kigyosch.MenuActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="100dp"
            android:layout_marginVertical="80dp"
            android:contentDescription="@string/logo_text"
            android:rotation="-5"
            app:srcCompat="@drawable/title_logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_weight="1"
                android:fontFamily="@font/golden_age"
                android:text="@string/start_game"
                android:textColor="@color/white" />

            <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="2" />

            <Button
                android:id="@+id/button2"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="100dp"
                android:layout_weight="1"
                android:fontFamily="@font/golden_age"
                android:text="@string/scoreboard" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>